data/derived/comb/progs/unify/prog0357.ml.out
Characters 13-49:
  let _ = eval (Sine(Average(VarX,VarY), 0.5, 0.5));;
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
